# ai-gateway

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs
src/handlers/: chat.rs  mod.rs  stats.rs
src/middleware/: auth.rs  mod.rs  rate_limit.rs  tracking.rs
src/models/: mod.rs
src/providers/: fallback.rs  mod.rs  ollama.rs  openai.rs
src/tracking/: mod.rs
