[package]
name = "ai-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
env_logger = "0.11"
log = "0.4"
uuid = { version = "1", features = ["v4"]}
futures-util = "0.3"
async-stream = "0.3"
async-trait = "0.1.89"
futures = "0.3"
bytes = "1"
dotenv = "0.15"
