[package]
name = "ai-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
log = "0.4"
uuid = { version = "1", features = ["v4"]}
futures-util = "0.3"
async-stream = "0.3"
async-trait = "0.1.89"
futures = "0.3"
bytes = "1"
dotenv = "0.15"
